manifests/workloads/tekton/ingress-ro.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-danmanners-ro-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tekton-ro.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: tekton
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-danmanners-ro-cert-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tekton-ro.danmanners.com`)
      kind: Rule
      services:
        - name: tekton-dashboard-readonly
          port: 9097
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-danmanners-ro-cert-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tekton-ro.danmanners.com`)
      kind: Rule
      services:
        - name: tekton-dashboard-readonly
          port: 9097
  tls:
    secretName: tekton-danmanners-ro-cert
